Remove the plotting scripts that were not utilising a function

--- a/cell_calling/m22_EDrops_ambient_cutoff_est.Rmd
+++ b/cell_calling/m22_EDrops_ambient_cutoff_est.Rmd
@@ -368,187 +368,16 @@ map(don_names, ~{
 ```
 
 
-```{r, message=F, warning=F, eval=T, fig.height= 4, fig.width=10}
-##Read edrops results matrices
-map(don_names, ~{
-  don = .x
-  map(c("knee", "inflection"), ~{
-    all_bcrank_mrg_sset <- all_bcrank_mrg %>% filter(donor == don)
-    
-    bcranks_cutoff_plot_fn(dset = all_bcrank_mrg_sset, hline_droplets = "n_cells_total_droplets_estimated_ndroplets", hline_droplets_lab = "umi_cutoff_droplets:", hline_cells = "n_cells_cell_estimate_estimated_ncells", hline_cells_lab = "umi_cutoff_cells:", line_part = .x)
-  
-  
-  })
-})
-
-```
-
-```{r, message=F, warning=F, eval=T, fig.height= 4, fig.width=10}
-##Read edrops results matrices
-map(don_names, ~{
-  don = .x
-  map(c("knee", "inflection"), possibly(~{
-    all_bcrank_mrg_sset <- all_bcrank_mrg %>% filter(donor == don)
-    
-    print(dim(all_bcrank_mrg_sset))
-    
-    label_data = distinct(all_bcrank_mrg_sset, donor, species, jumpcode, !!rlang::sym(paste0("umi_counts_cutoff_cell_estimate_", .x)), !!rlang::sym(paste0("umi_counts_cutoff_total_droplets_", .x)))
-    
-    all_bcrank_mrg_sset %>%
-    ggplot(., aes(x = rank, y = total)) +
-        geom_point(size = 0.3, alpha = 0.6) +
-        # scale_colour_manual(values = rank_colours) +
-        scale_x_log10() +
-        scale_y_log10() +
-      geom_hline(aes(yintercept = !!rlang::sym(paste0("umi_counts_cutoff_cell_estimate_", .x)))) +
-      geom_hline(aes(yintercept = !!rlang::sym(paste0("umi_counts_cutoff_total_droplets_", .x)))) +
-      geom_text(data = label_data,
-                aes(x = 500, 
-                    y = !!rlang::sym(paste0("umi_counts_cutoff_cell_estimate_", .x)), 
-                    label = paste("umi_cutoff_cells:", !!rlang::sym(paste0("umi_counts_cutoff_cell_estimate_", .x)))),
-                vjust = -0.2) +
-      geom_text(data = label_data,
-                aes(x = 500, 
-                    y = !!rlang::sym(paste0("umi_counts_cutoff_total_droplets_", .x)), 
-                    label = paste("umi_cutoff_droplets:", !!rlang::sym(paste0("umi_counts_cutoff_total_droplets_", .x)))),
-                vjust = -0.2) +
-      facet_wrap2(vars(donor, species, jumpcode), ncol = 6) +
-      labs(title = paste0(.x)) 
-  
-  
-  }), 'k=1 so no groups to compare which is necessary for the heatmap')
-})
-
-```
-
-
-```{r, message=F, warning=F, eval=T, fig.height= 15, fig.width=10}
+```{r, message=F, warning=F, eval=T, fig.height=25, fig.width=10}
 ##Read edrops results matrices
 map(c("knee", "inflection"), ~{
 
-  label_data = distinct(all_bcrank_mrg, donor, species, jumpcode, !!rlang::sym(paste0("umi_counts_cutoff_cell_estimate_", .x)), !!rlang::sym(paste0("umi_counts_cutoff_total_droplets_", .x)))
+    bcranks_cutoff_plot_fn(dset = all_bcrank_mrg, hline_droplets = "umi_counts_cutoff_total_droplets_", hline_droplets_lab = "umi_cutoff_droplets:", hline_cells = "umi_counts_cutoff_cell_estimate_", hline_cells_lab = "umi_cutoff_cells:", line_part = .x)
   
-  all_bcrank_mrg %>%
-  ggplot(., aes(x = rank, y = total)) +
-      geom_point(size = 0.3, alpha = 0.6) +
-      # scale_colour_manual(values = rank_colours) +
-      scale_x_log10() +
-      scale_y_log10() +
-    geom_hline(aes(yintercept = !!rlang::sym(paste0("umi_counts_cutoff_cell_estimate_", .x)))) +
-    geom_hline(aes(yintercept = !!rlang::sym(paste0("umi_counts_cutoff_total_droplets_", .x)))) +
-    geom_text(data = label_data,
-              aes(x = 500, 
-                  y = !!rlang::sym(paste0("umi_counts_cutoff_cell_estimate_", .x)), 
-                  label = paste("cell_estimate:", !!rlang::sym(paste0("umi_counts_cutoff_cell_estimate_", .x))))) +
-    geom_text(data = label_data,
-              aes(x = 500, 
-                  y = !!rlang::sym(paste0("umi_counts_cutoff_total_droplets_", .x)), 
-                  label = paste("total_droplets:", !!rlang::sym(paste0("umi_counts_cutoff_total_droplets_", .x))))) +
-    facet_wrap2(vars(donor, species, jumpcode)) +
-    labs(title = paste0(.x)) 
-
-
 })
 
-
 ```
 
-```{r, message=F, warning=F, eval=T}
-##Read edrops results matrices
-all_bcrank_umi_estimates <- map(c("knee", "inflection"), ~{
-
-  hlines_df = data.frame(lims = c(yascp_cbender_cutoffs_all_ncells_ndrops %>% filter(donor_cutoff == paste0(.y, "_cell_estimate")) %>% filter(method == knee_or_inlctn) %>% pull(umi_counts_cutoff),
-                                  yascp_cbender_cutoffs_all_ncells_ndrops %>% filter(donor_cutoff == paste0(.y, "_total_droplets")) %>% filter(method == knee_or_inlctn)  %>% pull(umi_counts_cutoff)),
-                         labls = c("cell_estimate", "total_droplets"),
-                         pos = rep(500, 2))
-  print(hlines_df)
-  
-  all_bcrank_mrg %>%
-    data.frame() %>%
-  # filter(total < 500) %>% 
-  filter(!(duplicated(rank))) %>%
-  # rename("total_umi" = detected) %>%
-  # mutate(category = case_when(total_umi <= 50 ~ "Below_Limit",
-  #                             is_cell_ed == "CellEd" ~ "CellEd",
-  #                             TRUE ~ "Non-Cell")) %>%
-  ggplot(., aes(x = rank, y = total)) +
-      geom_point(size = 0.3, alpha = 0.6) +
-      # scale_colour_manual(values = rank_colours) +
-      scale_x_log10() +
-      scale_y_log10() +
-    geom_hline(yintercept = hlines_df$lims) +
-    pivot_longer()
-    labs(title = paste0(knee_or_inlctn)) +
-      geom_text(data = hlines_df, mapping = aes(x = pos, y = lims, label = labls), vjust = -0.2)
-
-   
-})
-```
-
-
-
-```{r, message=F, warning=F, eval=T}
-##Read edrops results matrices
-all_bcrank_umi_estimates <- map(c("knee", "inflection"), ~{
-  knee_or_inlctn <- .x
-  imap(all_bcrank, possibly(~{
-  hlines_df = data.frame(lims = c(yascp_cbender_cutoffs_all_ncells_ndrops %>% filter(donor_cutoff == paste0(.y, "_cell_estimate")) %>% filter(method == knee_or_inlctn) %>% pull(umi_counts_cutoff),
-                                  yascp_cbender_cutoffs_all_ncells_ndrops %>% filter(donor_cutoff == paste0(.y, "_total_droplets")) %>% filter(method == knee_or_inlctn)  %>% pull(umi_counts_cutoff)),
-                         labls = c("cell_estimate", "total_droplets"),
-                         pos = rep(500, 2))
-  print(hlines_df)
-  
-  .x %>%
-    data.frame() %>%
-  # filter(total < 500) %>% 
-  filter(!(duplicated(rank))) %>%
-  # rename("total_umi" = detected) %>%
-  # mutate(category = case_when(total_umi <= 50 ~ "Below_Limit",
-  #                             is_cell_ed == "CellEd" ~ "CellEd",
-  #                             TRUE ~ "Non-Cell")) %>%
-  ggplot(., aes(x = rank, y = total)) +
-      geom_point(size = 0.3, alpha = 0.6) +
-      # scale_colour_manual(values = rank_colours) +
-      scale_x_log10() +
-      scale_y_log10() +
-    geom_hline(yintercept = hlines_df$lims) +
-    labs(title = paste0(.y, knee_or_inlctn)) +
-      geom_text(data = hlines_df, mapping = aes(x = pos, y = lims, label = labls), vjust = -0.2)
-
-    }), 'k=1 so no groups to compare which is necessary for the heatmap')
-})
-```
-
-```{r, message=F, warning=F, eval=T}
-##Read edrops results matrices
-imap(all_bcrank, possibly(~{
-  hlines_df = data.frame(lims = c(yascp_cbender_cutoffs_all_ncells_ndrops %>% filter(donor_cutoff == paste0(.y, "_wHsPf_cell_estimate")) %>% filter(method == "estimated_ncells") %>% pull(n_cells),
-                                  yascp_cbender_cutoffs_all_ncells_ndrops %>% filter(donor_cutoff == paste0(.y, "_wHsPf_total_droplets")) %>% filter(method == "estimated_ndroplets") %>% pull(n_cells)),
-                         labls = c("cell_estimate", "total_droplets"),
-                         pos = rep(5, 2))
-  # print(hlines_df)
-  
-  .x %>%
-    data.frame() %>%
-  # filter(total < 500) %>% 
-  filter(!(duplicated(rank))) %>%
-  # rename("total_umi" = detected) %>%
-  # mutate(category = case_when(total_umi <= 50 ~ "Below_Limit",
-  #                             is_cell_ed == "CellEd" ~ "CellEd",
-  #                             TRUE ~ "Non-Cell")) %>%
-  ggplot(., aes(x = rank, y = total)) +
-      geom_point(size = 0.3, alpha = 0.6) +
-      # scale_colour_manual(values = rank_colours) +
-      scale_x_log10() +
-      scale_y_log10() +
-    geom_vline(xintercept = hlines_df$lims) +
-    labs(title = .y) +
-      geom_text(data = hlines_df, mapping = aes(y = pos, x = lims, label = labls), vjust = -0.2, angle = 90)+
-  theme_classic()
-
-    }), 'k=1 so no groups to compare which is necessary for the heatmap')
-
-```
 
 ```{r, message=F, warning=F, eval=T, fig.height= 4, fig.width=10}
 ##Read edrops results matrices
